static/styles/_chameleon.scss
/* ... */
.navbar-brand > img {
  margin-top: -22px;
}

.partners {
  a {
    display: inline-block;
    vertical-align: middle;
    margin: 0 1em;
  }

  margin-bottom: 1em;
}

article {
  position: relative;
  margin-bottom: 0.5em;

  @include clearfix();

  h2 {
    border: 0;
    margin-bottom: 0.33em;

    &::after {
      display: none;
    }

    .post-date {
      white-space: nowrap;
      text-transform: none;
    }
  }

  .meta {
    color: $grey;
    font-size: 0.9em;
    margin-bottom: 0.5em;
  }

  &.block {
    position: relative;
    border-color: $brand-success;
    border-style: solid;
    border-width: 1px;
    background-color: white;
    padding: 0 0.75em;
    margin-bottom: 0.5em;
    height: 180px;
    overflow: hidden;

    h2 {
      position: relative;
      font-size: 1.25em;
      text-transform: uppercase;
      color: $brand-success;
    }

    .post-content {
      text-overflow: ellipsis;
      position: relative;

      img {
        max-height: 5.5em;
      }
    }

    .read-more {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      text-align: right;
      @include background-image(linear-gradient(to bottom, rgba(255,255,255,0.2), white));
    }
  }
}

.article-list article {
  border-bottom: 2px solid $brand-success;
}

.read-more-link {
  display: inline-block;
  position: relative;
  text-transform: uppercase;
  padding: 1px 10px;
  color: #fff;
  background-color: $brand-success;
  border: 0;

  &:before, &:after {
    position: absolute;
    opacity: 0;
    -webkit-transition-duration: .25s;
    transition-duration: .25s;
    -webkit-transition-property: all;
    transition-property: all;
  }

  &:before {
    content: "[ ";
    left: 0px;
  }

  &:after {
    content: " ]";
    right: 0px;
  }
}

.read-more-link:hover,
.read-more-link:focus {
  text-decoration: none;
  color: #fff;

  &:before, &:after {
    opacity: 1;
  }

  &:before {
    content: "[ ";
    left: 5px;
  }

  &:after {
    content: " ]";
    right: 5px;
  }
}

.news-item-summary {
  margin-bottom: 1em;
}

.messages {
  margin: 1em 0;
}

.navbar-chameleon {
  // Modernize nav link typography
  .navbar-nav > li > a {
    font-family: $font-family-headings;
    font-weight: 500;
    letter-spacing: 0.01em;
  }

  // Subtle frosted-glass look for nav links at desktop
  @media screen and (min-width: 768px) {
    .navbar-nav > li:not(.navbar-btn-alt) > a {
      margin: 16px 2px;
      padding: 8px 14px;
      border-radius: 4px;
      background-color: transparent;
    }

    .navbar-nav > li:not(.navbar-btn-alt) > a:hover,
    .navbar-nav > li:not(.navbar-btn-alt) > a:focus,
    .navbar-nav > li:not(.navbar-btn-alt):hover > a {
      background-color: rgba(black, 0.15);
    }

    .navbar-nav > li:not(.navbar-btn-alt).active > a {
      background-color: rgba(black, 0.25);
    }

    // Open dropdowns on hover at desktop
    .navbar-nav > li.dropdown:hover > .dropdown-menu {
      display: block;
      margin-top: 0;
    }
  }

  // Consistent styling for all right-side button items (Help Desk, Log in, user dropdown)
  .navbar-right > li > a {
    border: 1px solid rgba(white, 0.7);
    border-radius: 4px;
    transition: background-color 0.2s ease, border-color 0.2s ease;
  }

  .navbar-right > li > a:hover,
  .navbar-right > li > a:focus {
    background-color: rgba(white, 0.15);
    border-color: white;
  }

  .navbar-toggle {
    border-color: white;
    background-color: $brand-info;

    .icon-bar {
      background-color: white;
    }

    &:hover {
      background-color: darken($brand-info, 10%);
    }
  }
}

.required label:after, label.required:after {
	content: '*';
	color: red;
}

@media screen and (min-width:768px) and (max-width:991px) {
  .navbar-chameleon {
    .navbar-brand {
      width: 175px;
      img {
        margin-top: -16px;
      }
    }
  }
  .navbar-nav>li>a {
    padding-top: 24px;
    padding-bottom: 24px;
    padding-left: 7px;
    padding-right: 7px;
    font-size: 12px;
  }

  .navbar-chameleon .navbar-nav > .navbar-btn-alt > a {
    padding: 3px 8px;
    margin: 20px 2px;
  }

  .navbar-chameleon .navbar-right > li > a {
    padding-top: 8px;
    padding-bottom: 8px;
    margin-top: 16px;
    font-size: 12px;
  }
}

@media screen and (min-width:992px) {
  .navbar-nav>li>a {
    padding-left: 14px;
    padding-right: 14px;
  }

  .navbar-chameleon .navbar-nav > .navbar-btn-alt > a {
    padding: 3px 10px;
    margin: 20px 4px;
  }

  .site-header .nav > li.navbar-btn-alt.active > a {
    background-color: inherit;
  }
}

.btn-highlight {
  color: #fff;
  background-color: #eda711;
  border-color: #cd910f;

  &:hover {
    color: #fff;
    background-color: #cd910f;
    border-color: #9e6f0b;
  }

  &:focus {
    color: #fff;
  }
}

.breadcrumb {
    background-color: #fff;
    border: 1px solid #ddd;
}

.grayscale {
  filter: grayscale(100%);
}

